<resources>
    <string name="app_name">Remember You</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="colon"> : </string>
    <string name="rmbr_it_new">rmbr_it_new</string>
    <string name="welcome">Welcome </string>
    <string name="noTasks">No tasks added yet! </string>
    <string name="additionalTasks">Enter additional details</string>
    <string name="save">Save</string>
    <string name="taskTitle">Task title</string>
    <string name="taskDescription">Task description</string>
    <string name="basketball">Basketball </string>
    <string name="makeShots">make shots</string>
    <string name="newCatName">New category name</string>
    <string name="updateCat">Update category</string>
    <string name="titleForCat">Please enter title for new category</string>
    <string name="catName">Category name</string>
    <string name="noComTasks">No completed tasks yet!</string>
    <string name="userMsg">Please create username and pin to continue!</string>
    <string name="userName">Username</string>
    <string name="userPassword">Password</string>
    <string name="cont">Continue</string>
    <string name="newCategory">Add a new category</string>
    <string name="enterCategory">Enter category Name</string>
    <string name="updateTask">Update task</string>
    <string name="newCat">New category </string>
    <string name="welcomeUser"> Welcome user</string>
    <string name="addTask">Add a new task</string>
    <string name="taskForBasketball">Make 10 free throws and run laps before practise tomorrow and bring loads of water</string>
    <string name="yourCategories">Your categories:</string>
    <string name="insertTask">Insert task</string>
    <string name="titleForTask">Enter title for task</string>
    <string name="descriptionForTask">Enter description for task</string>
    <string name="insert">Insert </string>
    <string name="deleteTask">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="enterTitle">Enter title for task</string>
    <string name="enterDescription">Enter description for task</string>
    <string name="update">Update</string>
</resources>
