<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/insertTask"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/titleInsertPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:hint="@string/titleForTask" />

    <EditText
        android:id="@+id/descriptionInsertPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:hint="@string/descriptionForTask" />

    <Button
        android:id="@+id/insertPopUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10sp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/insert"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp" />

</LinearLayout>