<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jeffryraymond.rememberYou.rmbr_it_new.com.example.wattpad.rememberYou.activities.LoginScreenActivity">

    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/userMsg"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/msgTextView"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/cabin"
        android:hint="@string/userName"
        android:inputType="textImeMultiLine" />

    <EditText
        android:id="@+id/pinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameTextView"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/cabin"
        android:hint="@string/userPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pinCode"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/cont" />

</RelativeLayout>
