<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTaskTitleAD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/taskTitle"
        android:inputType="textAutoCorrect" />


    <EditText
        android:id="@+id/editTextTaskDescriptionAD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/taskDescription"
        android:inputType="textShortMessage" />

    <Spinner
        android:id="@+id/spinnerDataCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"></Spinner>

    <Button
        android:id="@+id/saveButtonADTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:text="@string/save"
        android:textAlignment="center" />

</LinearLayout>